--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18'
           
       - name: Install Dependencies
         run: npm install
@@ -24,6 +24,10 @@ jobs:
       - name: Build Production Code
         run: npm run build
         
+      - name: Verify Build Directory
+        run: |
+          ls -l dist # Check if the dist directory exists and contains the built files
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.6
         with:
